--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:layout_marginTop="10dp"
-                android:text="Titel"
+                android:text="title"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/product_img"
